tests/rosetta/out/Go/almkvist-giullera-formula-for-pi.error
parse: error[P999]: tests/rosetta/x/Mochi/almkvist-giullera-formula-for-pi.mochi:296:24: unexpected token "," (expected PostfixExpr)
  --> tests/rosetta/x/Mochi/almkvist-giullera-formula-for-pi.mochi:296:24

296 |   let line = repeat("-", 89)
    |                        ^

help:
  Parse error occurred. Check syntax near this location.